zero-cost-templating/tests/ui/compile_fail/wrong_type.stderr
error[E0308]: mismatched types
  --> tests/ui/compile_fail/wrong_type.rs:10:1
   |
10 | #[template_stream("test.html.hbs")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `()`
   |
   = note: this error originates in the attribute macro `template_stream` (in Nightly builds, run with -Z macro-backtrace for more info)
